--- a/web/index.html
+++ b/web/index.html
@@ -59,12 +59,16 @@
         });
       });
     </script>
+    <script type="text/javascript">
+      window.flutterWebRenderer = "html";
+    </script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgHvrFLRxLKMa73qO_eb1j8NrFLoEIHDY"></script> <!-- Replace YOUR_API_KEY with your actual Google Maps API key -->
     <script>
       var firebaseConfig = {
-        apiKey: "AIzaSyDgHvrFLRxLKMa73qO_eb1j8NrFLoEIHDY",
+        apiKey: "YOUR_FIREBASE_API_KEY",
         appId: "1:978431054644:web:e0ae7a5c998d8960cf4b61",
         messagingSenderId: "978431054644",
         projectId: "spoonshare-meal",
