Bug Fixes And Updated Package Name

--- a/web/index.html
+++ b/web/index.html
@@ -59,22 +59,18 @@
         });
       });
     </script>
-    <script type="text/javascript">
-      window.flutterWebRenderer = "html";
-    </script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgHvrFLRxLKMa73qO_eb1j8NrFLoEIHDY"></script> <!-- Replace YOUR_API_KEY with your actual Google Maps API key -->
     <script>
       var firebaseConfig = {
-        apiKey: "YOUR_FIREBASE_API_KEY",
-        appId: "1:978431054644:web:e0ae7a5c998d8960cf4b61",
-        messagingSenderId: "978431054644",
-        projectId: "spoonshare-meal",
-        authDomain: "spoonshare-meal.firebaseapp.com",
-        storageBucket: "spoonshare-meal.appspot.com",
-        measurementId: "G-DTHELS4X4P",
+        apiKey: "AIzaSyAXA-ac0gmdKzgc0oIjRaBmzindGUibL3w",
+        appId: "1:247631837332:web:d196c1cd53dd1b3d311c81",
+        messagingSenderId: "247631837332",
+        projectId: "spoonshare-10",
+        authDomain: "spoonshare-10.firebaseapp.com",
+        storageBucket: "spoonshare-10.appspot.com",
+        measurementId: "G-EZGKLJT7RF",
       };
       firebase.initializeApp(firebaseConfig);
     </script>
